--- a/src/app/product-details/product-details.component.css
+++ b/src/app/product-details/product-details.component.css
@@ -131,7 +131,7 @@
     margin-left: -4px;
     margin-right: -4px;
   position: relative;
-  min-width: 16.66666667% 
+  min-width: 16.66666667%
 
 }
 .option--select__item{
@@ -431,4 +431,12 @@
   border-radius: 16px;
   margin-top: 10px;
   margin-bottom: 20px;
+}
+.guide--user{
+  padding: 6px;
+  border: 1px solid white;
+}
+.guide--user.is-error{
+  border: 1px solid red;
+  border-radius: 10px;
 }
