--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -68,36 +68,41 @@
                   </span>
                 </label>
               </div>
-              <div class="option--heading">
-                <span>Kích thước:
-                  <span type="text" style="font-weight: bold;">{{size}}</span>
-                </span>
-                <span style="color: #2f5acf;" (click)="checkChooseSize()">Hướng dẫn chọn size</span>
-              </div>
-              <div class="choose--size">
-                <label class="choose--size__item">
-                  <input type="radio" name="size" value="m" (click)="setSize($event)">
-                  <span class="checkmark" [ngClass]="{'is-choose': this.size == 'M'}">M</span>
-                </label>
-                <label class="choose--size__item">
-                  <input type="radio" name="size" value="l" (click)="setSize($event)">
-                  <span class="checkmark" [ngClass]="{'is-choose': this.size == 'L'}">L</span>
-                </label>
-                <label class="choose--size__item">
-                  <input type="radio" name="size" value="xl" (click)="setSize($event)">
-                  <span class="checkmark" [ngClass]="{'is-choose': this.size == 'XL'}">XL</span>
-                </label>
+              <div class="guide--user" [ngClass]="{'is-error':isShowToast}">
+                <div class="option--heading">
+                  <span>Kích thước:
+                    <span type="text" style="font-weight: bold;">{{size}}</span>
+                  </span>
+                  <span style="color: #2f5acf;">Hướng dẫn chọn size</span>
+                </div>
+                <div class="choose--size">
+                  <label class="choose--size__item">
+                    <input type="radio" name="size" value="m" (click)="setSize($event)">
+                    <span class="checkmark" [ngClass]="{'is-choose': this.size == 'M'}">M</span>
+                  </label>
+                  <label class="choose--size__item">
+                    <input type="radio" name="size" value="l" (click)="setSize($event)">
+                    <span class="checkmark" [ngClass]="{'is-choose': this.size == 'L'}">L</span>
+                  </label>
+                  <label class="choose--size__item">
+                    <input type="radio" name="size" value="xl" (click)="setSize($event)">
+                    <span class="checkmark" [ngClass]="{'is-choose': this.size == 'XL'}">XL</span>
+                  </label>
+                </div>
               </div>
             </div>
           </div>
           <div class="product--single__action">
             <div class="product--single__quality">
-              <a href="#" class="quantity__reduce">-</a>
-              <input type="number" value="1" max="99" min="1" class="quantity__control">
-              <a href="#" class="quantity__augure">+</a>
+              <a style="cursor: pointer;" class="quantity__reduce" (click)="countSub()" >-</a>
+              <input type="number" value="1" max="99" min="1" class="quantity__control" [(ngModel)]="count"  >
+              <a style="cursor: pointer;" class="quantity__augure" (click)="countAdd()">+</a>
             </div>
             <div class="product-single__button" >
-              <a href="#" class="btn">Chọn kích thước </a>
+              <a class="btn">
+                <p *ngIf="!result" (click)="showError()">Chọn kích thước</p>
+                <p *ngIf="result"  (click)="goCart()">Thêm vào giỏ hàng</p>
+              </a>
             </div>
           </div>
         </div>
@@ -190,3 +195,10 @@
     <!-- End -->
   </div>
 </div>
+
+<app-toast-message
+*ngIf="this.isShowToast"
+[type]="'red'"
+[textMessage]="'Vui lòng chọn biến thể'"
+(setDefault)="returnDefaultValue()"
+></app-toast-message>
