--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,3 +1,4 @@
 <p>cat work!</p>
 <!-- <input type="text" [(ngModel)]="name" value="name"> -->
 <a href=""> click me</a>
+<app-textfield [contentPlacehoder] = "'hihi'" [widthExp]="'200px'"></app-textfield>
