--- a/src/app/textfield/textfield.component.html
+++ b/src/app/textfield/textfield.component.html
@@ -1,1 +1,3 @@
-<p>textfield works!</p>
+<div class="grid--column" [ngStyle]="{'width': widthExp}">
+  <input type="text" class="input" [placeholder]="contentPlacehoder">
+</div>
