--- a/src/app/textfield/textfield.component.html
+++ b/src/app/textfield/textfield.component.html
@@ -1,3 +1,4 @@
 <div class="grid--column" [ngStyle]="{'width': widthExp}">
-  <input type="text" class="input" [placeholder]="contentPlacehoder">
+  <input  type="text" class="input" [placeholder]="contentPlacehoder"
+  >
 </div>
