--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,24 +1,27 @@
-<div class="top--bar">
-  <a href="#">Chào mừng 20/11, Ưu đãi giảm đến 50% toàn bộ áo sơ mi nam</a>
-</div>
-<div class="header">
-  <div class="header--inner">
-    <div class="header--logo">
-      <a href="/"><img src="https://www.coolmate.me/images/logo-coolmate.svg" alt="Logo Coolmate"></a>
-    </div>
-    <div class="header--menu">
-      <ul>
-        <li>Sản phẩm</li>
-        <li>84RISING*</li>
-        <li>Coolxprint</li>
-        <li>Về taomate</li>
-        <li>Chọn size</li>
-      </ul>
-    </div>
-    <div class="header--actions">
-      <img src="https://www.coolmate.me/images/header/icon-search.svg" alt="Icon Search">
-      <img src="https://www.coolmate.me/images/header/icon-account.svg" alt="Icon Account">
-      <a routerLink="/cart"><img src="https://www.coolmate.me/images/header/icon-cart.svg" alt="Icon mini cart"></a>
+<div class="packet">
+  <div class="top--bar">
+    <a href="#">Chào mừng 20/11, Ưu đãi giảm đến 50% toàn bộ áo sơ mi nam</a>
+  </div>
+  <div class="header">
+    <div class="header--inner">
+      <div class="header--logo">
+        <a href="/"><img src="https://www.coolmate.me/images/logo-coolmate.svg" alt="Logo Coolmate"></a>
+      </div>
+      <div class="header--menu">
+        <ul>
+          <li>Sản phẩm</li>
+          <li>84RISING*</li>
+          <li>Coolxprint</li>
+          <li>Về taomate</li>
+          <li>Chọn size</li>
+        </ul>
+      </div>
+      <div class="header--actions">
+        <img src="https://www.coolmate.me/images/header/icon-search.svg" alt="Icon Search">
+        <img src="https://www.coolmate.me/images/header/icon-account.svg" alt="Icon Account">
+        <a [routerLink]="['/cart']" routerLinkActive="router-link-active" ><img src="https://www.coolmate.me/images/header/icon-cart.svg" alt="Icon mini cart"></a>
+      </div>
     </div>
   </div>
+
 </div>
