--- a/src/app/top-bar/top-bar.component.css
+++ b/src/app/top-bar/top-bar.component.css
@@ -1,3 +1,9 @@
+.packet:hover .top--bar{
+  background-color: #d9d9d9;
+}
+.packet:hover .header{
+  background-color: #f9f86c;
+}
 .top--bar{
   width: 100%;
   height: 30px;
@@ -14,6 +20,7 @@ a{
 .header{
   width: 100%;
   height: 50px;
+  border-bottom: 1px solid #d9d9d9;
 }
 .header--inner{
   padding: 0 64px;
