--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -3,3 +3,4 @@
 <input type="text" #newItem>
 <!-- khi click vào btn ở component con, sẽ truyền đi 1 giá trị ở ô input -->
 <button (click)="doSomething(newItem.value)">click</button>
+<img src="/src/assets/images/wakanda-sp1-den-hinh4.jpg" width="300">
