--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,6 +1,6 @@
 <div class="packet">
   <div class="top--bar">
-    <a href="#">Chào mừng 20/11, Ưu đãi giảm đến 50% toàn bộ áo sơ mi nam</a>
+    <a href="#">Freeship cho đơn từ 200k</a>
   </div>
   <div class="header">
     <div class="header--inner">
@@ -9,11 +9,25 @@
       </div>
       <div class="header--menu">
         <ul>
-          <li>Sản phẩm</li>
-          <li>84RISING*</li>
-          <li>Coolxprint</li>
-          <li>Về taomate</li>
-          <li>Chọn size</li>
+          <li>
+            <a>Sản phẩm</a>
+            <div class="product--list">
+              <div class="product--list__title"></div>
+              <div class="product--list__item"></div>
+            </div>
+          </li>
+          <li>
+            <a>84RISING*</a>
+          </li>
+          <li>
+            <a>Coolxprint</a>
+          </li>
+          <li>
+            <a>Về taomate</a>
+          </li>
+          <li>
+            <a>Chọn size</a>
+          </li>
         </ul>
       </div>
       <div class="header--actions">
