--- a/src/app/toast-message/toast-message.component.css
+++ b/src/app/toast-message/toast-message.component.css
@@ -70,3 +70,9 @@
   top: 32px;
   right: 32px;
 }
+.new--line{
+  margin: 1rem 0;
+  border: none;
+  border-top: 1px solid #D9D9D9;
+  height: 1px;
+}
