--- a/src/app/toast-message/toast-message.component.html
+++ b/src/app/toast-message/toast-message.component.html
@@ -10,9 +10,9 @@
         <div class="new--line"></div>
         <div class="new--details">
           <div class="new--details__img">
-            <img src="{{product.imgUrl}}">
+            <img src="{{product.imgUrl[0]}}">
           </div>
-          <div class="new--details__title">{{product.name}}</div>
+          <div class="new--details__title">{{product.productName}}</div>
           <div class="new--details__option">{{product.size}}</div>
           <div class="new--details__price">{{product.price}}</div>
         </div>
