refactor: upgrade top bar, add event hover produt

--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,1 +1,1 @@
-<button [ngClass]="typeButton">{{contentButton}}</button>
+<button [ngClass]="typeButton" class="btn btn--primary ">{{contentButton}}</button>
