--- a/src/app/dashbroad/dashbroad.component.html
+++ b/src/app/dashbroad/dashbroad.component.html
@@ -27,7 +27,7 @@
     <div class="home--tap--header">
       <a class="home--tap__item" style="text-align: left;" [ngClass]="{'is-active' : isActive}" (click)="changeTab(1)">Black Panther</a>
       <a class="home--tap__item" [ngClass]="{'is-active' : isActive2}" (click)="changeTab(2)">Đồ thu đông</a>
-      <a class="home--tap__item" style="text-align: right;" [ngClass]="{'is-active' : isActive3}" (click)="changeTab(3)">Quần lót nam</a>
+      <a class="home--tap__item" style="text-align: right;" [ngClass]="{'is-active' : isActive3}" (click)="changeTab(3)">Phụ kiện</a>
     </div>
     <!-- End Tab Index -->
     <div [ngSwitch]="tabIndex">
