--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -5,6 +5,7 @@
     --container-box-shadow: #0000004a 0px 3px 8px 0px;
     --base-background-color: #fff;
     --button-color: #4083ff;
+    --a-hover-color: #2f5acf;
     --button-background-color: #fff;
     --button-border-color: #e0e0e0;
     --button-background-color-disabled: #f5f5f5;
