--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,1 +1,8 @@
-<button [ngClass]="typeButton" class="btn btn--primary ">{{contentButton}}</button>
+<button class="btn"
+[ngStyle]="{'background-color':backgroundColor,'color':colorText,'border':border}"
+[type]="type">
+{{contentButton}}
+  <ng-content>
+  </ng-content>
+</button>
+
