--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -6,6 +6,7 @@
     --base-background-color: #fff;
     --button-color: #4083ff;
     --a-hover-color: #2f5acf;
+    --border-input-button:#ccc;
     --button-background-color: #fff;
     --button-border-color: #e0e0e0;
     --button-background-color-disabled: #f5f5f5;
